--- a/WebContent/css/film_show.css
+++ b/WebContent/css/film_show.css
@@ -37,7 +37,7 @@
 			}
 			
 			.review_avatar {
-				margin-left:10px;
+				margin-left:5px;
 				width: 50px;
 				height: 50px;
 			}
@@ -55,7 +55,8 @@
 			.review_text{
 				margin: 10px;
 			}
-			.review_ooxx{
+			.review_ooxx *{
+				font-size:14px;
 				color: grey;
 				margin-left: 10px;
 			}
