加入单篇影评页面、调整导航栏

--- a/WebContent/css/film_show.css
+++ b/WebContent/css/film_show.css
@@ -52,8 +52,20 @@
 }
 
 .review_text {
-	font-size:16px;
+	font-size: 16px;
 	margin: 10px;
+}
+
+pre {
+	font-size: 16px;
+	font-family: "Î¢ÈíÑÅºÚ";
+	width: 100%;
+	padding: 0;
+	white-space: pre-wrap; 
+	word-wrap : break-word;
+	border: none;
+	background-color: white;
+	word-wrap: break-word;
 }
 
 .review_ooxx * {
